bk_ida/gccida/c1/mark_effect
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_effect/src/cfgcleanup.c:684:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = ( ( unsigned int)( mode_class_0[v4] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_effect/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_effect/src/cfgcleanup.c:711:55: error: expected expression
if ( rtx_equal_for_cselib_p( exp->fld[0].rtx, *( rtx *)&exp[1]) ) 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_effect/src/cfgcleanup.c:726:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[v9] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_effect/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_effect/src/obj/cfgcleanup.o] Error 1
